# leo-pnt

./: .gitignore  Cargo.toml  README.md
.orchestration/: CONTRACTS.md  DECISIONS.md  PLAN.md
.orchestration/briefs/: U-A1.md  U-AC1.md  U-AU1.md  U-B1.md  U-C1.md  U-CAP1.md  U-D1.1.md  U-D1.md  U-E1.md  U-E2.md  U-F1.md  U-H1-triage.md  U-H2.md  U-I2.md  U-I3.md  U-J1.md  U-M1.md  U-MS1.md  U-P1.md  U-R1.md  U-R2.md  U-R2b.md  U-R3.md  U-R4.md  U-R5.md  U-R6.md  U-RT0.md  U-RT0b.md  U-RT0c.md  U-RT0d.md  U-RT1.md  U-S1.md  U-ST1.md  U-T1.md  U-V1.md  U-V2.md
.orchestration/reports/: PR1-review-opus.md  PR2-review-opus.md  U-A1-fix-mandate.md  U-A1-review-opus.md  U-A1-review-sonnet.md  U-A1.md  U-AC1.md  U-AU1.md  U-B1.md  U-C1-review-summary.md  U-C1.md  U-CAP1.md  U-D1-review-opus-verify.md  U-D1-review-opus.md  U-D1-review-sonnet.md  U-D1.1.md  U-D1.md  U-D2.md  U-E1-review-summary.md  U-E1.md  U-E2.md  U-F1-fix-mandate.md  U-F1-review-opus.md  U-F1-review-sonnet.md  U-F1.md  U-H1-review-sol.md  U-H1-triage.md  U-H1-verify-sol.md  U-H1.md  U-H2-fix-mandate2.md  U-H2-review-opus.md  U-H2.1-review-opus.md  U-H2.md  U-I2-fix-mandate.md  U-I2-review-opus.md  U-I2.md  U-I3-review-opus.md  U-I3.md  U-J1.md  U-M1-fix-mandate.md  (+38 more)
crates/fusion-executive/: Cargo.toml
crates/fusion-executive/src/: band_trust.rs  lib.rs
crates/fusion-executive/tests/: executive.rs
crates/pnt-capture/: Cargo.toml  README.md
crates/pnt-capture/src/: lib.rs
crates/pnt-capture/tests/: file_replay.rs
crates/pnt-config/: Cargo.toml
crates/pnt-config/src/: lib.rs
crates/pnt-ephemeris/: Cargo.toml
crates/pnt-ephemeris/src/: lib.rs
crates/pnt-ephemeris/tests/: ephemeris.rs
crates/pnt-ephemeris/tests/fixtures/: iss.json  iss.tle
crates/pnt-ephemeris/tests/fixtures/real/: constellations-2026-204.tle  starlink-150-2026-205.tle  starlink-supgp-120-2026-204.tle
crates/pnt-estimator/: Cargo.toml
crates/pnt-estimator/src/: lib.rs
crates/pnt-integrity/: Cargo.toml
crates/pnt-integrity/src/: lib.rs
crates/pnt-integrity/tests/: authority.rs
crates/pnt-journal/: Cargo.toml  README.md
crates/pnt-journal/src/: lib.rs  tests.rs
crates/pnt-mission/: Cargo.toml  README.md
crates/pnt-mission/src/: lib.rs
crates/pnt-mission/tests/: mission.rs
crates/pnt-predictor/: Cargo.toml
crates/pnt-predictor/src/: lib.rs
crates/pnt-predictor/tests/: predictor.rs
crates/pnt-replay/: Cargo.toml  README.md
crates/pnt-replay/src/: lib.rs  tests.rs
crates/pnt-smoother/: Cargo.toml
crates/pnt-smoother/src/: lib.rs
crates/pnt-studies/: Cargo.toml  README.md
crates/pnt-studies/src/: consistency.rs  correction.rs  endurance.rs  highspeed.rs  lib.rs  maneuver.rs  multisat.rs  passage.rs
crates/pnt-studies/src/estimator/: mod.rs
crates/pnt-studies/src/realtle/: mod.rs
crates/pnt-time/: Cargo.toml
crates/pnt-time/src/: lib.rs
crates/pnt-tracker/: Cargo.toml  README.md
crates/pnt-tracker/src/: lib.rs  synth.rs
crates/pnt-tracker/tests/: tracker.rs
crates/pnt-types/: Cargo.toml
crates/pnt-types/src/: lib.rs
docs/: CODE_CHANGE_PLAN.md  COMBINED_RESEARCH.md  COMBINED_SOFTWARE_BRIEF.md  HANDOFF_PROMPT_BLADERF.md
docs/design/: ARCHITECTURE.md  BOM.md  CONSISTENCY_FIX_SPEC.md  DESIGN_BASELINE.md  EMITTER_ARRAY_FEASIBILITY.md  HIGH_SPEED_ENVELOPE.md  PARAMS_PROPOSAL.md  SAFETY_CASE.md
docs/research/: R1-bladerf-market.md  R2-services-regs.md  R4-signal-structures.md  R5-highspeed-dynamics.md  R6-unknown-emitter-array.md
docs/studies/consistency/: STUDY.md  results.json
docs/studies/endurance/: STUDY.md  results.json
docs/studies/estimator/: STUDY.md  results.json
docs/studies/highspeed/: STUDY.md  results.json
docs/studies/maneuver/: STUDY.md  results.json
docs/studies/multisat/: STUDY.md  results.json
docs/studies/passage/: STUDY.md  results.json
docs/studies/realtle/: STUDY.md  results.json
docs/studies/tracker/: STUDY.md  detection-accuracy.json  dynamics.json  false-alarm-tail.json  impairments.json  manifest.json  quality-variance.json
tools/mavlink_bridge/: .gitignore  README.md  pyproject.toml
tools/mavlink_bridge/mavlink_bridge/: __init__.py  cli.py  mapping.py  synthetic.py
tools/mavlink_bridge/tests/: test_mapping.py  test_schema.py
tools/sitl/: .gitignore  README.md  ardurover.sha256  build.sh  characterize_d17a.py  params.parm  requirements-build.txt  run.sh  run_acceptance.py
tools/sitl/evidence/: D17a.md  d17a-case-a-mavlink.jsonl  d17a-mavlink.jsonl  mavlink.jsonl
