[package]
name = "fusion-executive"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
pnt-config = { path = "../pnt-config" }
pnt-estimator = { path = "../pnt-estimator" }
pnt-integrity = { path = "../pnt-integrity" }
pnt-journal = { path = "../pnt-journal" }
pnt-time = { path = "../pnt-time" }
pnt-types = { path = "../pnt-types" }
pnt-ephemeris = { path = "../pnt-ephemeris" }
pnt-predictor = { path = "../pnt-predictor" }
chrono = "0.4.43"

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0"
