[package]
name = "pnt-replay"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
fusion-executive = { path = "../fusion-executive" }
pnt-config = { path = "../pnt-config" }
pnt-estimator = { path = "../pnt-estimator" }
pnt-integrity = { path = "../pnt-integrity" }
pnt-journal = { path = "../pnt-journal" }
pnt-time = { path = "../pnt-time" }
pnt-types = { path = "../pnt-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
