[package]
name = "pnt-studies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
nalgebra = "0.33"
pnt-ephemeris = { path = "../pnt-ephemeris" }
pnt-estimator = { path = "../pnt-estimator" }
pnt-predictor = { path = "../pnt-predictor" }
pnt-types = { path = "../pnt-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
