[package]
name = "pnt-studies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
nalgebra = "0.33"
num-complex = "0.4.6"
pnt-ephemeris = { path = "../pnt-ephemeris" }
pnt-estimator = { path = "../pnt-estimator" }
pnt-predictor = { path = "../pnt-predictor" }
pnt-tracker = { path = "../pnt-tracker" }
pnt-types = { path = "../pnt-types" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[lints]
workspace = true
